--- a/playbooks/roles/edx_ansible/templates/update.j2
+++ b/playbooks/roles/edx_ansible/templates/update.j2
@@ -47,6 +47,11 @@ extra_args="$extra_args -e 'disable_edx_services=true' -e devstack=true"
 declare -A repos_to_cmd
 edx_ansible_cmd="{{ edx_ansible_venv_bin }}/ansible-playbook -i localhost, -c local $extra_args"
 
+asset_stop='false'
+if [[ "$4" == "asset_stop" ]]; then
+    asset_stop='true'
+fi
+
 repos_to_cmd["edx-platform"]="$edx_ansible_cmd edxapp.yml -e 'edx_platform_version=$2'"
 repos_to_cmd["edx-workers"]="$edx_ansible_cmd edxapp.yml -e 'edx_platform_version=$2' -e 'celery_worker=true'"
 repos_to_cmd["xqueue"]="$edx_ansible_cmd xqueue.yml -e 'xqueue_version=$2' -e 'elb_pre_post=false'"
@@ -62,8 +67,8 @@ repos_to_cmd["ecommerce"]="$edx_ansible_cmd ecommerce.yml -e 'ECOMMERCE_VERSION=
 repos_to_cmd["discovery"]="$edx_ansible_cmd discovery.yml -e 'DISCOVERY_VERSION=$2'"
 repos_to_cmd["notifier"]="$edx_ansible_cmd notifier.yml -e 'NOTIFIER_VERSION=$2'"
 repos_to_cmd["edx-notes-api"]="$edx_ansible_cmd notes.yml -e 'EDX_NOTES_API_VERSION=$2'"
-repos_to_cmd["microsites"]="$edx_ansible_cmd microsites.yml -e 'microsite_version=$2' -e 'edxapp_git_ssh_key=$3'"
-repos_to_cmd["themes"]="$edx_ansible_cmd themes.yml -e 'edxapp_theme_version=$2' -e 'edxapp_git_ssh_key=$3'"
+repos_to_cmd["microsites"]="$edx_ansible_cmd microsites.yml -e 'microsite_version=$2' -e 'edxapp_git_ssh_key=$3' -e 'assets_stop=$asset_stop'"
+repos_to_cmd["themes"]="$edx_ansible_cmd themes.yml -e 'edxapp_theme_version=$2' -e 'edxapp_git_ssh_key=$3' -e 'assets_stop=$asset_stop'"
 
 if [[ -z $1 || -z $2 ]]; then
     echo
