--- a/playbooks/roles/rabbitmq/templates/etc/rabbitmq/rabbitmq.config.j2
+++ b/playbooks/roles/rabbitmq/templates/etc/rabbitmq/rabbitmq.config.j2
@@ -9,5 +9,9 @@
   {vm_memory_high_watermark, {{ RABBITMQ_VM_MEMORY_HIGH_WATERMARK }} },
   {disk_free_limit, "{{ RABBITMQ_DISK_FREE_LIMIT }}" },
   {channel_max, {{ RABBITMQ_CHANNEL_MAX }} },
-  {tcp_listeners, [{"0.0.0.0", 5672}, {"::", 5672}]}
+  {tcp_listeners, [{"0.0.0.0", 5672}]},
+{#
+   https://www.rabbitmq.com/networking.html#dealing-with-high-connection-churn
+#}
+  {handshake_timeout, 20000}
 ]}].
